Removed Blog page, added Illustration page and images, named projects

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ### GENERAL SETTINGS ###
 
 # Site settings
-title: SOLID.
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Vicky Guareschi .
+description: "Awesome portfolio of a 26 year old design and photopgraphy lover."
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
 baseurl: "" #important: start with /
 url: "http://yourdomain.com"
@@ -37,11 +37,11 @@ social:
   - title: dribbble
     url:
   - title: facebook
-    url:
+    url: http://facebook.com/vickyguareschi
   - title: twitter
-    url:
+    url: http://twitter.com/vickyguareschi
   - title: instagram
-    url:
+    url: http://instagram.com/vickyguareschi
   - title: tumblr
     url:
 
@@ -51,8 +51,8 @@ address:
     - Some Ave, 987,
     - 23890, New York,
     - United States.
-email: hello@solidtheme.com
-tel: +34 8493-4893
+email: vickyguareschi@gmail.com
+tel: 
 
 
 ### GENERAL DATA FOR VARIOUS LOCATIONS ###
