--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Vicky Guareschi .
 description: "Awesome portfolio of a 26 year old design and photopgraphy lover."
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
-baseurl: "" #important: start with /
+baseurl: "/solid-jekyll" #important: start with /
 url: "http://yourdomain.com"
 
 # Build settings
