--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### GENERAL SETTINGS ###
 
 # Site settings
-title: Vicky Guareschi .
+title: Vicky Guareschi
 description: "Awesome portfolio of a 26 year old design and photopgraphy lover."
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
 baseurl: "/solid-jekyll" #important: start with /
