Changed color of footer content

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ colors:  #in hex code if not noted else
   link: "#f5b7d4"
   link_hover: "#b64780"
   footer_heading: "#ffffff"
-  footer_content: "#f5b7d4"
+  footer_content: "#ffffff"
 
 # Making projects separate from posts
 collections:
