--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: VICKY GUARESCHI
 description: "Portfolio of a 26 year old design, illustration and photopgraphy lover."
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
 baseurl: "/solid-jekyll" #important: start with /
-url: "http://www.vickyguareschi.com"
+url: "https://vickyguareschi.github.io"
 
 # Build settings
 markdown: kramdown
